site/styles/content.less
/**
 * Content Style Sheet
 * IBI-Trade Landing Page
 *
 * Copyright (c) 2017. by Way2CU, http://way2cu.com
 * Authors: Iliya Melishev, Mladen Mijatov
 */

@step: 0.5;
@pause: 0;

h1, h2, h3, h4, h5 {
	color: @color_blue;
}

.account-link(@text_color: @color_white, @background_color: #133550) {
	position: relative;
	display: inline-block;
	padding: 1em 2em;

	border: 2px solid @color_gold;
	border-radius: 35px;
	background-color: @background_color;

	color: @text_color;
	font-size: 1.2em;
	font-weight: 700;
	text-decoration: none;

	transition: all 0.3s;
	overflow: hidden;

	&:before {
		content: attr(data-text2);
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		padding: 1em 1.5em;

		border-radius: 35px;
		background-color: @background_color;
		color: @text_color;

		animation-fill-mode: both;
		animation-name: text2-animation;
		animation-duration: 7.5s;
		animation-iteration-count: infinite;
		animation-timing-function: ease-in-out;
	}

	&:after {
		content: attr(data-text3);
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		padding: 1em 1.5em;

		border-radius: 35px;
		background-color: @background_color;
		color: @text_color;

		animation-fill-mode: both;
		animation-name: text3-animation;
		animation-duration: 7.5s;
		animation-iteration-count: infinite;
		animation-timing-function: ease-in-out;
	}

	&:hover {
		border-color: @color_white;
		background-color: @color_gold;
		color: @color_white;
		animation-name: none;
	}

	&:hover:before,
	&:hover:after {
		animation-name: none;
		opacity: 0;
	}
}

/**
 * New account
 */
section#open_account {
	padding: 0 calc(~'(100% - 1200px)' / 2);
	background-image: url(../images/header.jpg);
	background-position: center bottom;
	background-repeat: no-repeat;
	min-height: 700px;
	color: @color_white;
	padding-top: 105px;
}

section#open_account article {
	display: block;
	width: 30%;
	margin: 0 auto;
	text-align: center;
}

section#open_account article h1 {
	margin: 0;
	font-weight: 400;
	font-size: 4em;
	line-height: 100%;
	padding-top: 0.5em;
	color: @color_white;
}

section#open_account article h1 strong {
	font-weight: 700;
}

section#open_account article:first-of-type p {
	font-size: 1.5em;
	margin: 0;
	padding: 1em 0;
}

section#open_account article p {
	font-size: 1.2em;
}

section#open_account a.account {
	.account-link();

	display: block;
	width: 150px;
	margin: 0 auto;
	text-align: center;
}

section#open_account article:first-of-type {
	.animation-slide-from-right(@step, @pause + 1);
}

section#open_account article:last-of-type {
	.animation-slide-from-left(@step, @pause + 1);
}

/**
 * Features
 */
div#features {
	padding: 0 calc(~'(100% - 1200px)' / 2);
	text-align: center;
}

div#features h2 {
	display: inline-block;
	vertical-align: middle;
	margin-left: 100px;
}

div#features a.account {
	.account-link(@color_gold, @color_white);
}

div#features ul {
	margin: 0 auto;
	padding: 0;
	list-style: none;
	padding-top: 1em;
}

div#features ul li {
	display: inline-block;
	vertical-align: top;
	width: 20%;
	text-align: center;
	position: relative;
	box-sizing: border-box;
	padding: 0 1em;
}

div#features ul li:after {
	content: '';
	position: absolute;
	height: 50px;
	width: 50px;
	top: 64px;
	left: -20px;
	transform: translateY(-50%);

	background-image: url(../images/arrow.svg);
	background-size: 50px 50px;
	background-position: center;
	background-repeat: no-repeat;
}

div#features ul li:last-of-type:after {
	display: none;
}

div#features ul li svg {
	display: block;
	margin: 0 auto;
	width: 8em;
	height: 8em;
}

div#features ul li h4 {
	font-weight: 400;
}

svg.open {
	path:nth-of-type(2),
	path:nth-of-type(3) {
		.animation-fly-in(@step, @step * 2);
	}

	path:nth-of-type(4) {
		.animation-fade-in(@step, 0);
	}

	path:nth-of-type(5) {
		.animation-fade-in(@step, @step);
	}
}

@delay: @step * 2 + @pause;
svg.id {
	g.card,
	g.body {
		.animation-fade-in(@step, @delay);
	}

	g.lines path {
		@t: 0.1;
		transform-origin: 0% 50%;

		&:nth-of-type(1) {.animation-scale-horizontal(@step, @delay + @step + @t * 1);}
		&:nth-of-type(2) {.animation-scale-horizontal(@step, @delay + @step + @t * 2);}
		&:nth-of-type(3) {.animation-scale-horizontal(@step, @delay + @step + @t * 3);}
		&:nth-of-type(4) {.animation-scale-horizontal(@step, @delay + @step + @t * 4);}
		&:nth-of-type(5) {.animation-fade-in(@step, @delay + @step + @t * 5);}
	}
}

@delay2: @delay + @step + @pause;
svg.forms {
	g.pages path {
		.animation-fade-in(@step, @delay2);
	}

	g.lines path {
		@t: 0.1;
		transform-origin: 100% 50%;

		&:nth-of-type(1) { .animation-scale-horizontal(@step, @delay2 + @step + @t * 1); }
		&:nth-of-type(2) { .animation-scale-horizontal(@step, @delay2 + @step + @t * 2); }
		&:nth-of-type(3) { .animation-scale-horizontal(@step, @delay2 + @step + @t * 3); }
		&:nth-of-type(4) { .animation-scale-horizontal(@step, @delay2 + @step + @t * 4); }
	}
}

@delay3: @delay2 + @step * 2;
svg.chat {
	g.person {
		transform-origin: 50% 50%;
		.animation-scale-fade(@step, @delay3);
	}

	g.bubble {
		transform-origin: 50% 50%;
		.animation-scale-fade(@step, @delay3 + @step);
	}

}

@delay4: @delay3 + @step * 2;
svg.sign {
	@t: 0.1;
	g.paper {
		transform-origin: 50% 50%;
		.animation-scale-fade(@step, @delay4);
	}

	g.pen {
		transform-origin: 100% 50%;
		.animation-rotate(@step, @delay4 + @step);
	}

	g.pen-lines path {
		transform-origin: 100% 100%;
		&:nth-of-type(1) { .animation-scale-horizontal(@step, @delay4 + @step + @step + @t * 1); }
		&:nth-of-type(2) { .animation-scale-horizontal(@step, @delay4 + @step + @step + @t * 2); }
		&:nth-of-type(3) { .animation-scale-horizontal(@step, @delay4 + @step + @step + @t * 3); }
		&:nth-of-type(4) { .animation-scale-horizontal(@step, @delay4 + @step + @step + @t * 4); }
	}
}

div#features {
	path, g {
		animation-play-state: paused;
	}
}

div#features.active {
	path, g {
		animation-play-state: running;
	}
}

/**
 * Benefits
 */
section#benefits {
	padding: 0 calc(~'(100% - 1200px)' / 2);
	background-image: url(../images/macbook.png), url(../images/benefits.jpg);
	background-position: center 350px, center top;
	background-repeat: no-repeat;
	color: @color_text;
	min-height: 900px;
}

section#benefits h1 {
	margin: 0;
	text-align: center;
	padding-top: 150px;
}

section#benefits > article {
	@image_size: 550;
	@spacing: 25;

	display: inline-block;
	max-width: unit((1200 - @image_size) / 2 - @spacing, px);
	vertical-align: middle;
	padding-top: 2em;
	text-align: center;

	&:nth-of-type(even) {
		margin-left: unit(@image_size + @spacing * 2, px);
	}

	&:first-of-type {
		display: block;
		max-width: unit(@image_size, px);
		margin: 0 auto;
	}
}

section#benefits article h3 {
	margin: 0;
}

/*
 * Benifits services
 */

section#benefits div.services {
	padding-top: 200px;
	padding-bottom: 1em;
}

section#benefits div.services h2 {
	text-align: center;
	padding-bottom: 1em;
}

section#benefits div.services article ul {
	display: block;
	margin: 0;
}

section#benefits div.services article ul li {
	position: relative;
	display: inline-block;
	vertical-align: middle;
	box-sizing: border-box;
	margin-bottom: 1em;
	padding-right: 1em;

	font-size: 1.2em;
	list-style: disc;
}

section#benefits div.services article ul li:after {
	content: '';
	width: 0.3em;
	height: 0.3em;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	right: 0;
	background-color: black;
	border-radius: 100%;
}

section#benefits div.services article ul li:nth-of-type(odd) {
	width: 60%;
}

/**
 * Benifits animation
 */

section#benefits > article:first-of-type {
	.animation-slide-from-top(@step, @delay);
}

section#benefits > article:nth-of-type(2) {
	.animation-slide-from-right(@step, @delay + 0.5);
}

section#benefits > article:nth-of-type(3) {
	.animation-slide-from-right(@step, @delay + 0.75);
}

section#benefits > article:nth-of-type(4) {
	.animation-slide-from-right(@step, @delay + 1);
}

section#benefits > article:nth-of-type(5) {
	.animation-slide-from-right(@step, @delay + 1.25);
}

section#benefits > article {
	animation-play-state: paused;
}

section#benefits.active > article {
	animation-play-state: running;
}

/**
 * Why IBI
 */
section#why_ibi {
	padding: 0 calc(~'(100% - 1200px)' / 2);
	padding-top: 150px;
	background-image: url(../images/success.jpg);
	background-repeat: no-repeat;
	background-position: center bottom;
	min-height: 700px;

	text-align: center;
}

section#why_ibi > article {
	text-align: center;
	box-sizing: border-box;
	padding-left: calc(~'(100% - 600px)');
}

section#why_ibi a {
	.account-link(@color_gold, @color_white);

	margin-top: 1em;
	display: inline-block;
	margin-left: calc(~'(100% - 600px)');
	padding: 1em 2.5em;
}

section#why_ibi article h1,
section#why_ibi article h2 {
	margin: 0;
}

section#why_ibi article {
	.animation-slide-from-bottom(@step, @pause);
	animation-play-state: paused;
}

section#why_ibi.active article,
section#why_ibi.active a {
	animation-play-state: running;
}

section#why_ibi a {
	.animation-slide-from-bottom(@step, @pause);
	animation-play-state: paused;
}

/**
 * Footer
 */
section {
	padding: 0 calc(~'(100% - 1200px)' / 2);
	background-image: url(../images/footer.jpg);
	background-repeat: no-repeat;
	background-position: center bottom;
	min-height: 700px;
	padding-top: 100px;
}

section#footer article {
	width: 50%;
	margin: 0 auto;
	text-align: center;
	padding-bottom: 3em;
}

section#footer article h1,
section#footer article p {
	margin: 0;
}

section article h3 {
	color: @color_text;
}

section div.footer_information {
	width: 30%;
	margin: auto;
	margin-right: 0;
	padding-bottom: 300px;
	text-align: center;
	font-size: 1.2em;
}

section div.footer_information > a svg {
	width: 7em;
	height: 7em;
}

section div.footer_information h3 {
	margin: 0;
	line-height: 100%;
}

section div.footer_information a:last-of-type {
	.account-link(@color_gold, @color_white);
	display: inline-block;
	margin-top: 1em;
}

/**
 * Footer animations
 */
section#footer article {
	.animation-slide-from-bottom(@step, @pause);
	animation-play-state: paused;
}

section#footer.active article {
	animation-play-state: running;
}

/**
 * Copyright
 */
footer div.copyright {
	background-color: @color_text;
	color: @color_white;
	text-align: center;

	background-position: calc(~'50% - 100px') center;
}

footer div.copyright a {
	text-decoration: none;
	color: @color_gold;
	transition: all 0.3s;

	&:hover {
		color: @color_menu_active;
	}
}

/**
 * Tablet support
 */
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
	section {
		padding: 1em;
	}

	section#benefits {
		padding: 1em;
		background-position: center 45%, 60% top;
		background-size: 350px 350px, 1920px 900px;
	}

	section#benefits > article:nth-of-type(even) {
		margin-left: 340px;
	}

	section#benefits div.services {
		padding-top: 100px;
	}

	section#why_ibi {
		padding: 1em;
	}

	section#footer {
		padding: 1em;
	}

	section#footer div.footer_information {
		margin-right: 1em;
	}
}

